solidity/dashboard/src/css/choose-wallet-address.less
ul.choose-wallet-address {
    list-style: none;
    align-self: normal;
    
    li {
        cursor: pointer;
        padding: 0.5rem 2rem;
        display: flex;

        &:nth-child(odd) {
            background-color: @color-grey-10;
        }
        label, label input[type=radio] {
            cursor: pointer;
        }
        
        label input[type=radio] {
            margin-right: 2rem;
        }

        a {
            margin-left: auto;
        }
    }
}

.choose-wallet-address__pagination {
    display: flex;
    flex: 1;
    align-self: flex-start;
    justify-content: space-between;
    width: 100%;
    margin-top: 1rem;

    .choose-wallet-address__pagination__item {
        .h5();
        .cursor-pointer();

        &:last-of-type {
            margin-left: auto;
        }
        
        &:hover {
            text-decoration: underline;
        }
    }
}

